--- a/sandcastles.html
+++ b/sandcastles.html
@@ -12,13 +12,13 @@
 <div class="container">
   <h1>Sandcastles of the United States!</h1>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" id="sandcastle1">
       <img src="img/Sandcastle 1.jpeg" alt="Sandcastle">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" id="sandcastle2">
       <img src="img/sandcastle2.jpeg" alt="Sand sculpture women">
     </div>
-    <div class= "col-md-4">
+    <div class= "col-md-4" id="sandcastle3">
       <img src="img/sandcastle3.jpg" alt="Sand ship constition">
     </div>
   </div>
